# xcvr_eeprom_tool

./: README.md  pyproject.toml  requirements.txt
cmis_eeprom/: __init__.py  cli.py  constants.py  eeprom.py  format.py  paging.py
cmis_eeprom/backends/: __init__.py  base.py  linux_i2c.py  optoe_sysfs.py
cmis_eeprom_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backends.py  test_paging.py
