[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmis-eeprom-tool"
version = "1.0.0"
description = "Standalone CMIS module EEPROM read/write for Linux I2C devices"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "cmis-eeprom-tool contributors" }]
keywords = ["cmis", "qsfp", "eeprom", "i2c", "optoe", "transceiver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
smbus = ["smbus2>=0.4"]
dev = ["pytest>=7.0"]

[project.scripts]
cmis-eeprom = "cmis_eeprom.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmis_eeprom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
